--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <h3>Projects</h3>
                 <ul class="list">
                     <li>
-                      <strong>Stochastic Volatility – Heston Model:</strong> Developed a Monte Carlo simulation in Python to price European call options under the Heston model. Calibrated for precision with statistical error below 0.1% and implemented implied volatility extraction by using non-linear solvers like the bisection method. Extended the model to produce implied volatility curves (volatility smile) over a range of strike prices.
+                      <strong>Stochastic Volatility – Heston Model:</strong> Developed a Monte Carlo simulation in C++ to price European call options under the Heston model. Calibrated for precision with statistical error below 0.1% and implemented implied volatility extraction by using non-linear solvers like the bisection method. Extended the model to produce implied volatility curves (volatility smile) over a range of strike prices.
                     </li>
                     <li>
                       <strong>Jump Diffusion – Merton Model:</strong> Created an analytical pricing engine for European options incorporating jumps via a Poisson process with log-normal jump sizes. Explored parameter sensitivity and impact on implied volatility curves. Implemented a Monte Carlo version and benchmarked numerical estimates against analytical results.
