--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div id="contact" class="sixth">
             <h2 class="contact">CONTACT</h2>
             <div class="contact-links">
-              <a class="contact-link" href="bkabinan@gmail.com">
+              <a class="contact-link" href="mailto:bkabinan@gmail.com">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg"
                   alt="Email Icon"
